# shapeBPF

./: .gitignore  Cargo.toml  config.example.toml  flake.nix
nix/: dev-vm.nix  module.nix
nix/tests/: bandwidth-limit.nix  default-rules.nix  priority.nix
shapebpf/: Cargo.toml  build.rs
shapebpf-common/: Cargo.toml
shapebpf-common/src/: lib.rs
shapebpf-ebpf/: Cargo.toml
shapebpf-ebpf/src/: main.rs  offsets.rs
shapebpf-ebpf/src/bpf/: WHY_USING_C.md  bpf_kfuncs.h  ingress.bpf.c  qdisc.bpf.c
shapebpf/src/: main.rs  tui_main.rs
shapebpf/src/daemon/: config.rs  discovery.rs  ebpf_loader.rs  ipc_server.rs  mod.rs  qos.rs  rules.rs  stats.rs
shapebpf/src/tui/: app.rs  ipc_client.rs  mod.rs
shapebpf/src/tui/views/: action_menu.rs  batch_review.rs  batch_review_pids.rs  cgroup_info.rs  create_rule.rs  detail.rs  mod.rs  process_list.rs  rule_editor.rs
shapebpf/src/tui/widgets/: bandwidth_bar.rs  mod.rs  notification.rs
xtask/: Cargo.toml
xtask/src/: main.rs
