[workspace]
members = ["shapebpf", "shapebpf-common", "xtask"]
exclude = ["shapebpf-ebpf"]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
log = "0.4"
env_logger = "0.11"
aya = { git = "https://github.com/aya-rs/aya", branch = "main" }
shapebpf-common = { path = "shapebpf-common" }
ratatui = "0.30"
crossterm = "0.29"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"
toml = "0.9"
bollard = "0.20"
nix = { version = "0.31", features = ["signal", "user", "socket"] }
clap = { version = "4", features = ["derive"] }
libc = "0.2"
libbpf-rs = "0.24"
libbpf-sys = "1.6"
serde_json = "1"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
