[package]
name = "shapebpf"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "shapebpf-daemon"
path = "src/main.rs"

[[bin]]
name = "shapebpf-tui"
path = "src/tui_main.rs"

[dependencies]
shapebpf-common = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
aya = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
toml = { workspace = true }
bollard = { workspace = true }
nix = { workspace = true }
clap = { workspace = true }
libc = { workspace = true }
libbpf-rs = { workspace = true }
libbpf-sys = { workspace = true }
serde_json = { workspace = true }
